// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VExpansionPanel.js should render a multiple component and match snapshot 1`] = `

<div class="v-expansion-panel theme--light">
  <div tabindex="0"
       class="v-expansion-panel__container"
  >
    <div class="v-expansion-panel__activator">
      <div class="v-list__item">
        <div>
          header
        </div>
      </div>
      <div class="v-list__item__icon v-expansion-panel__icon">
        <i aria-hidden="true"
           class="v-icon material-icons theme--light"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div class="v-expansion-panel__body"
         style="display: none;"
    >
      content
    </div>
  </div>
</div>

`;

exports[`VExpansionPanel.js should render a multiple component and match snapshot 2`] = `

<div class="v-expansion-panel theme--light">
  <div tabindex="0"
       class="v-expansion-panel__container v-expansion-panel__container--active"
  >
    <div class="v-expansion-panel__activator">
      <div class="v-list__item">
        <div>
          header
        </div>
      </div>
      <div class="v-list__item__icon v-expansion-panel__icon">
        <i aria-hidden="true"
           class="v-icon material-icons theme--light"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div class="v-expansion-panel__body expand-transition-enter expand-transition-enter-active"
         style="overflow: hidden; height: 0px;"
    >
      content
    </div>
  </div>
</div>

`;

exports[`VExpansionPanel.js should render component and match snapshot 1`] = `

<div class="v-expansion-panel theme--light">
  <div tabindex="0"
       class="v-expansion-panel__container"
  >
    <div class="v-expansion-panel__activator">
      <div class="v-list__item">
        <div>
          header
        </div>
      </div>
      <div class="v-list__item__icon v-expansion-panel__icon">
        <i aria-hidden="true"
           class="v-icon material-icons theme--light"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div class="v-expansion-panel__body"
         style="display: none;"
    >
      content
    </div>
  </div>
</div>

`;

exports[`VExpansionPanel.js should render component and match snapshot 2`] = `

<div class="v-expansion-panel theme--light">
  <div tabindex="0"
       class="v-expansion-panel__container v-expansion-panel__container--active"
  >
    <div class="v-expansion-panel__activator">
      <div class="v-list__item">
        <div>
          header
        </div>
      </div>
      <div class="v-list__item__icon v-expansion-panel__icon">
        <i aria-hidden="true"
           class="v-icon material-icons theme--light"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div class="v-expansion-panel__body expand-transition-enter expand-transition-enter-active"
         style="overflow: hidden; height: 0px;"
    >
      content
    </div>
  </div>
</div>

`;

exports[`VExpansionPanel.js should show content on v-model change 1`] = `

<div class="v-expansion-panel theme--light">
  <div tabindex="0"
       class="v-expansion-panel__container"
  >
    <div class="v-expansion-panel__activator">
      <div class="v-list__item">
        <div class="v-list__item__content">
          <div class="subtitle-1">
          </div>
        </div>
      </div>
      <div class="v-list__item__icon v-expansion-panel__icon">
        <i aria-hidden="true"
           class="v-icon material-icons theme--light"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div class="v-expansion-panel__body"
         style="display: none;"
    >
    </div>
  </div>
</div>

`;
